--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             BIODATA DIRI
         </h1>
 
+        <h4>
+            <center><a href="https://www.instagram.com/verdisetyawana.p?igsh=NDIwdWxzaWI3MTRu"><img src="instagram.png" alt="instagram" style="width: 40px; height: 40px;"></a></center>
+        </h4>
+
         <img src="VERDI.jpg" alt="verdi" class="self">
 
         <h1 class="me">ABOUT ME</h1>
